# frag

./: .ghci  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  README-leveleg  README.md  frag.cabal  leveleg.cfg  leveleg.med  stack.yaml
app/: Main.hs
lib/: BitSet.hs  IdentityList.hs  Matrix.hs  PhysicalDimensions.hs
src/: BSP.hs  Camera.hs  Collision.hs  Command.hs  Curves.hs  Frustum.hs  Game.hs  GameInputParser.hs  HGL.hs  MD3.hs  MapCfg.hs  Object.hs  ObjectBehavior.hs  Quaternion.hs  Raybox.hs  Render.hs  RenderObject.hs  TGA.hs  TextureFonts.hs  Textures.hs  Visibility.hs
tga/models/players/klesk/: animation.cfg  head_default.skin  lower_default.skin  upper_default.skin
